--- a/Week 2/MIU-1308-Week-2-Bronze/additem.html
+++ b/Week 2/MIU-1308-Week-2-Bronze/additem.html
@@ -3,18 +3,22 @@
 <!--
 Travis Pochintesta
 MIU 1308
-Week 2
+Week 2 Bronze
 additem.html
 -->
 
 <html>
     <head>
         <meta charset="UTF-8" />
-        <meta name="description" content="Mobile Interfaces & Usability Week 1 Assignment - Travis Pochintesta" />
+        <meta name="description" content="Mobile Interfaces & Usability Week 2 Assignment - Travis Pochintesta" />
         <meta name="keywords" content="html5, Mobile Development, Full Sail University" />
         <meta name="robots" content="index, follow" />
-        <meta name="viewport" content="user-scalable=no, width=device-width" />
+        <meta name="HandheldFriendly" content="True">
+		<meta name="MobileOptimized" content="320"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="cleartype" content="on">
         <title>KiT</title>
+         <!-- Import CSS Styles-->
         <link href="css/style.css" type="text/css" rel="stylesheet"/>
     </head>
     <body id="content">
