--- a/Week 2/MIU-1308-Week-2-Gold/noitemsfound.html
+++ b/Week 2/MIU-1308-Week-2-Gold/noitemsfound.html
@@ -3,7 +3,7 @@
 <!--
 Travis Pochintesta
 MIU 1308
-Week 2
+Week 2 Bronze
 noitemsfound.html
 -->
 
@@ -11,16 +11,22 @@ noitemsfound.html
   <!-- Document Head -->
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Mobile Interfaces & Usability Week 1 Assignment - Travis Pochintesta" />
+    <meta name="description" content="Mobile Interfaces & Usability Week 2 Assignment - Travis Pochintesta" />
     <meta name="keywords" content="html5, Mobile Development, Full Sail University" />
     <meta name="robots" content="index, follow" />
-    <meta name="viewport" content="user-scalable=no, width=device-width" />
+    <meta name="HandheldFriendly" content="True">
+	<meta name="MobileOptimized" content="320"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="cleartype" content="on">
     <!-- Document Title -->
       <title>
         KiT
       </title>
-            <!-- Import CSS Styles-->
-      <link href="css/style.css" type="text/css" rel="stylesheet"/>
+    <!-- Import CSS Styles-->
+  <!--	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" /> -->
+    <link href="css/style.css" type="text/css" rel="stylesheet"/>
+    <!-- js HTML5 Modernizr -->
+  <!--    <script src="js/libs/modernizr.custom.min.js"></script>  -->
   </head>
   <!-- Document Body -->
   <body>
@@ -53,6 +59,8 @@ noitemsfound.html
         </a>
       </nav>
   </body>
+<!--	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+	<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script> -->
   	<script src="js/json.js" type="text/javascript"></script>	
 	<script src="js/main.js" type="text/javascript"></script>
 </html>
