--- a/Week 2/MIU-1308-Week-2-Gold/noitemsfound.html
+++ b/Week 2/MIU-1308-Week-2-Gold/noitemsfound.html
@@ -19,14 +19,19 @@ noitemsfound.html
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="cleartype" content="on">
     <!-- Document Title -->
-      <title>
-        KiT
-      </title>
-    <!-- Import CSS Styles-->
-  <!--	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" /> -->
+    <title>
+      KiT
+    </title>
+    <!-- Import CSS Styles -->
+    <!-- 
+<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
+-->
     <link href="css/style.css" type="text/css" rel="stylesheet"/>
     <!-- js HTML5 Modernizr -->
-  <!--    <script src="js/libs/modernizr.custom.min.js"></script>  -->
+    <!-- 
+<script src="js/libs/modernizr.custom.min.js">
+</script>
+-->
   </head>
   <!-- Document Body -->
   <body>
@@ -41,26 +46,33 @@ noitemsfound.html
       </hgroup>
     </header>
     <!-- Image Logo -->
-      <div>
-        <a href= "additem.html">
-          <img src="img/KiT2.png" style="float:left" type="img/png" height="110" id="logo" title="raccoonlogo"/>
-        </a>
-      </div>
-      <p>
-        <strong>
-          No Items Found :(
-        </strong>
-      </p>
-      
-      <!-- Navigation -->
-      <nav>
-        <a href="additem.html">
-          Add Contact
-        </a>
-      </nav>
+    <div>
+      <a href= "additem.html">
+        <img src="img/KiT2.png" style="float:left" type="img/png" height="110" id="logo" title="raccoonlogo"/>
+      </a>
+    </div>
+    <p>
+      <strong>
+        No Items Found :(
+      </strong>
+    </p>
+    
+    <!-- Navigation -->
+    <nav>
+      <a href="additem.html">
+        Add Contact
+      </a>
+    </nav>
   </body>
-<!--	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-	<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script> -->
-  	<script src="js/json.js" type="text/javascript"></script>	
-	<script src="js/main.js" type="text/javascript"></script>
+  <!-- 
+<script src="http://code.jquery.com/jquery-1.9.1.min.js">
+</script>
+<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js">
+</script>
+-->
+  <script src="js/json.js" type="text/javascript">
+  </script>
+  
+  <script src="js/main.js" type="text/javascript">
+  </script>
 </html>
