--- a/Week 3/MIU-1308-Week-3-Gold/index.html
+++ b/Week 3/MIU-1308-Week-3-Gold/index.html
@@ -132,6 +132,94 @@ index.html
   </div>
   
 </nav>
+
+<!-- Form Page -->
+
+<div data-role="page" id="capturecritter" data-add-back-btn="true">
+
+	<div data-role="header" data-position="fixed">
+		<h1>Add Critter</h1>
+	</div>
+	
+	<div data-role="content">
+		
+		<form action="" method="post" id="capturecritterform">
+		
+			<div data-role="fieldcontain">		
+				<label for="fname">First Name:</label>
+				<input type="text" name="fname" id="fname" />
+			</div>
+			
+			<div data-role="fieldcontain">
+				<label for="lname">Last Name:</label>
+				<input type="text" name="lname" id="lname" />
+			</div>
+			
+			<div data-role="fieldcontain">
+				<label for="notes">Notes:</label>
+				<textarea></textarea>
+			</div>
+			
+			<div data-role="fieldcontain">
+				<label for="bestyrating">Besty Rating:</label>
+				<input type="range" name="bestyrating" id="bestyrating" value="0" min="0" max="10">
+			</div>
+			
+			<div data-role="fieldcontain">
+				<label for="wildtame">Behavior:</label>
+				<select data-role="slider">
+					<option value="off">Tame</option>
+					<option value="on">Wild!</option>
+				</select>
+			</div>
+			
+			<div data-role="fieldcontain">
+				<input type="reset" value="Reset" data-theme="a"/>
+				<input type="submit" value="Submit" data-theme="c"/>
+			</div>
+			
+			<div data-role="fieldcontain">
+				<fieldset data-role="controlgroup" data-type="horizontal">
+					<legend>M/F</legend>
+					<input type="radio" value="Male" name="gender" id="male" />
+					<label for="male">Male</label>
+					<input type="radio" value="Female" name="gender" id="female" />
+					<label for="female">Female</label>
+				</fieldset>
+			</div>
+			
+			<div data-role="fieldcontain">
+				<fieldset data-role="controlgroup">
+					<legend>Relationship</legend>
+					<input type="checkbox" value="Friend" name="relationship" id="friend" />
+					<label for="friend">Friend</label>
+					<input type="checkbox" value="Family" name="relationship" id="family" />
+					<label for="family">Family</label>
+					<input type="checkbox" value="Work" name="relationship" id="work" />
+					<label for="work">Work</label>
+					<input type="checkbox" value="School" name="relationship" id="school" />
+					<label for="school">School</label>
+					<input type="checkbox" value="Acquaintance" name="relationship" id="acquaintance" />
+					<label for="acquaintance">Acquaintance</label>
+				</fieldset>
+			</div>
+			
+			<div data-role="fieldcontain">
+				<label for="title">Title:</label>
+				<select name="title" id="title">
+					<option value="Mr.">Mr.</option>
+					<option value="Ms.">Ms.</option>
+					<option value="Mrs.">Mrs.</option>
+					<option value="Dr.">Dr.</option>
+				</select>
+			</div>	
+			
+		</form>
+			
+	</div>
+	
+</div>	
+
 </body>
 <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 <script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
